# server/internal/handler/cat.go
@@ -10,7 +10,7 @@ import (
 )
 
 // CatCreate
-// @Tags         cats
+// @Tags         cat
 // @Summary      Создание записи о кошке
 // @Description  Добавление новой записи о кошке в базу данных с логированием ошибок
 // @Accept       multipart/form-data
@@ -96,7 +96,19 @@ func (h *Handler) CatCreate(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(res)
 }
 
-func (h *Handler) UpdateCat(c *fiber.Ctx) error {
+// CatUpdate
+// @Tags         cat
+// @Summary      Обновление записи о кошке
+// @Description  Обновление существующей записи о кошке в базе данных с логированием ошибок
+// @Accept       json
+// @Produce      json
+// @Param        id             path     int                 true  "ID кошки"
+// @Param        body           body     entities.UpdateCatRequest true "Данные для обновления кошки"
+// @Success      200 {object}   map[string]string "Успешное обновление записи"
+// @Failure      400 {object}   entities.ErrorResponse "Некорректные данные"
+// @Failure      500 {object}   entities.ErrorResponse "Внутренняя ошибка сервера"
+// @Router       /cat/{id} [put]
+func (h *Handler) CatUpdate(c *fiber.Ctx) error {
 	var cat entities.UpdateCatRequest
 	err := c.BodyParser(&cat)
 	if err != nil {
@@ -121,13 +133,24 @@ func (h *Handler) UpdateCat(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"message": "success"})
 }
 
-func (h *Handler) DeleteCat(c *fiber.Ctx) error {
+// CatDelete
+// @Tags         cat
+// @Summary      Удаление записи о кошке
+// @Description  Удаление записи о кошке из базы данных по её идентификатору с логированием ошибок
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "ID кошки для удаления"
+// @Success      200  {object}  map[string]string "Успешное удаление записи"
+// @Failure      400  {object}  entities.ErrorResponse "Некорректный идентификатор"
+// @Failure      500  {object}  entities.ErrorResponse "Внутренняя ошибка сервера"
+// @Router       /cat/{id} [delete]
+func (h *Handler) CatDelete(c *fiber.Ctx) error {
 	id, err := c.ParamsInt("id")
 	if err != nil {
 		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
-			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+			Url: c.OriginalURL(), Status: fiber.StatusBadRequest})
 		logEvent.Msg(err.Error())
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
 	}
 
 	h.logger.Debug().Msg("call postgres.DBCatDelete")
@@ -144,4 +167,64 @@ func (h *Handler) DeleteCat(c *fiber.Ctx) error {
 	logEvent.Msg("success")
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"message": "success"})
 
+}
+
+// CatGetByID
+// @Tags         cat
+// @Summary      Получение информации о кошке по ID
+// @Description  Получение данных о конкретной кошке из базы данных по её идентификатору с логированием ошибок
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "ID кошки для поиска"
+// @Success      200  {object}  entities.Cat "Успешное получение данных о кошке"
+// @Failure      400  {object}  entities.ErrorResponse "Некорректный идентификатор"
+// @Failure      500  {object}  entities.ErrorResponse "Внутренняя ошибка сервера"
+// @Router       /cat/id/{id} [get]
+func (h *Handler) CatGetByID(c *fiber.Ctx) error {
+	id, err := c.ParamsInt("id")
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusBadRequest})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	h.logger.Debug().Msg("call postgres.DBCatGetByID")
+	res, err := postgres.DBCatGetByID(h.db, id)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Info", Method: c.Method(),
+		Url: c.OriginalURL(), Status: fiber.StatusOK})
+	logEvent.Msg("success")
+	return c.Status(fiber.StatusOK).JSON(res)
+}
+
+// CatGetAll
+// @Tags         cat
+// @Summary      Получение списка всех кошек
+// @Description  Получение всех записей о кошках из базы данных с логированием ошибок
+// @Accept       json
+// @Produce      json
+// @Success      200  {array}   entities.Cat "Успешное получение списка кошек"
+// @Failure      500  {object}  entities.ErrorResponse "Внутренняя ошибка сервера"
+// @Router       /cat [get]
+func (h *Handler) CatGetAll(c *fiber.Ctx) error {
+	h.logger.Debug().Msg("call postgres.DBCatGetAll")
+	cats, err := postgres.DBCatGetAll(h.db)
+	if err != nil {
+		logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Error", Method: c.Method(),
+			Url: c.OriginalURL(), Status: fiber.StatusInternalServerError})
+		logEvent.Msg(err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	logEvent := log.CreateLog(h.logger, log.LogsField{Level: "Info", Method: c.Method(),
+		Url: c.OriginalURL(), Status: fiber.StatusOK})
+	logEvent.Msg("success")
+	return c.Status(fiber.StatusOK).JSON(cats)
 }
